--- a/css/main.css
+++ b/css/main.css
@@ -81,3 +81,12 @@ h2 {
   height: 8px;
   background-color: #6236ffbd;
 }
+
+.section-title {
+
+  margin-top: 65px;
+  margin-bottom: 0px;
+  color: black;
+  font-size: 40px;
+  text-align: center;
+ }
