--- a/css/main.css
+++ b/css/main.css
@@ -90,3 +90,17 @@ h2 {
   font-size: 40px;
   text-align: center;
  }
+
+ .subtitle1, .subtitle2 { 
+  font-weight: bold;
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 35px ; }
+
+  .subtitle3 { 
+margin-top:64px;
+        margin-bottom: 0px;
+        color: white;
+        font-size: 40px;
+        text-align: left;
+   }
