--- a/css/main.css
+++ b/css/main.css
@@ -82,6 +82,19 @@ h2 {
   background-color: #6236ffbd;
 }
 
+.middle {
+  background-color: #242021;
+  padding-bottom: 597px;
+}
+
+.panel {
+color: #ffffff;
+font-size: 40px;
+text-align: center;
+padding-top: 64px;
+padding-bottom: 64px;
+}
+
 .button { 
 align-content: right;
 border: 2px solid #fcda00;
