--- a/css/main.css
+++ b/css/main.css
@@ -196,7 +196,7 @@ grid-gap: 20px;
 }
 
 .game{
-  position:relative;
+position:relative;
 }
 
 .grid-description {
@@ -223,13 +223,14 @@ color: #fce700;
 
 .grid-content {
 position: absolute;
-background-color: #231F20;
+background-color: rgb(0 0 0 / 78%);
 top: 0;
 right: 0;
 bottom: 0;
 left: 0;
 opacity: 0;
-transition: opacity 300ms,
+transition: opacity 300ms, transform 300ms;
+transform: translateX(-10px);
 }
 
 .grid-category {
@@ -255,9 +256,8 @@ color: #fcda00;
 }
 
 .game:hover .grid-content {
-opacity:0;
+opacity: 1;
 transform: translateY(10px);
-transition: 800ms transform ease-in-out, 200ms opacity;
 }
 
 
