--- a/css/main.css
+++ b/css/main.css
@@ -223,16 +223,20 @@ color: #fce700;
 
 .grid-content {
 position: absolute;
-background-color: rgb(0 0 0 / 78%);
+background-color: rgb(0 0 0 / 60%);
 top: 0;
 right: 0;
 bottom: 0;
 left: 0;
 opacity: 0;
 transition: opacity 300ms, transform 300ms;
-transform: translateX(-10px);
+transform: translateX(10px);
+border-radius: 15px;
 }
 
+.grid-image{
+display: block;
+}
 .grid-category {
 width: 117px;
 height: 20px;
@@ -257,7 +261,7 @@ color: #fcda00;
 
 .game:hover .grid-content {
 opacity: 1;
-transform: translateY(10px);
+transform: translateY(5px);
 }
 
 
