--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,13 @@ h2 {
   font-weight: bold;
 }
 
-
+h5 {
+color: #ffffff;
+font-size: 40px;
+text-align: center;
+padding-top: 64px;
+padding-bottom: 64px;
+}
 /**
 * ------
 * Layout
@@ -264,7 +270,36 @@ opacity: 1;
 transform: translateY(5px);
 }
 
+.colonneformulaire1{
+margin-right: 64px;
+margin-left: 248px;
+}
 
+.form-row {
+  flex-basis: 35%;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 12px;
+}
+
+#name{
+  border-radius: 8px;
+  height: 38px;
+  border-color: #231f20;
+}
+
+#subject{
+border-radius: 8px;
+height: 38px;
+width: 200px;
+border-color: #231f20;
+}
+
+#email{
+border-radius: 8px;
+height: 38px;
+border-color: #231f20;
+}
 
 .colonne1 {
 text-align: justify;
@@ -320,6 +355,7 @@ flex-grow:1;
   mix-blend-mode: darken; 
 }
 
+
 .colonne6 {
 margin-top: 32px;
 justify-content: center;
@@ -327,4 +363,5 @@ align-items: center;
 display: flex;
 flex-basis: 0;
 flex-grow: 1;
+
 
